# se-toolkit-lab-8

./: .env.docker.secret.save  REPORT.md  docker-compose.yml  docker-compose.yml.bak  pyproject.toml
backend/src/lms_backend/routers/: items.py
caddy/: Caddyfile
mcp/mcp-observability/: pyproject.toml
mcp/mcp-observability/src/mcp_observability/: __main__.py  client.py  server.py  settings.py  tools.py
nanobot/: Dockerfile  config.json  entrypoint.py  pyproject.toml
nanobot/nanobot_webchat/: channel.py  schemas.py  structured.py
nanobot/workspace/: CRON_JOBS.md  cron_config.json
nanobot/workspace/cron/: jobs.json
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
wiki/: quality-assurance.md
