[project]
name = "nanobot"
version = "0.1.0"
description = "Nanobot gateway for LMS"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "nanobot-ai",
    "mcp-lms",
    "nanobot-webchat",
    "mcp-webchat",
]

[tool.uv.sources]
nanobot-ai = { url = "https://github.com/HKUDS/nanobot/archive/e7d371ec1e6531b28898ec2c869ef338e8dd46ec.zip" }
mcp-lms = { workspace = true }
nanobot-webchat = { workspace = true }
mcp-webchat = { workspace = true }
