[project]
name = "mcp-observability"
version = "0.1.0"
description = "MCP server for VictoriaLogs and VictoriaTraces observability queries"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_observability"]

[project.scripts]
mcp-observability = "mcp_observability.__main__:main"
